@@ -1,3 +1,4 @@
+Build a Mixed Fraction: Numbers: Fixed: whole numbers no longer centered in target cells
 Build a Mixed Fraction: Numbers: Made the whole number grow when dropped in the skeleton
 Build a Mixed Fraction: Numbers: Made the "whole" number part of the skeleton taller (full height of the fractional portion)
 Build a Mixed Fraction: Numbers: Fixed: Level 3 "flowers" were random and not filled properly
